[gd_scene load_steps=14 format=3 uid="uid://b56x7p17lmasf"]

[ext_resource type="Script" path="res://scripts/paddle.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://7c38rm2um2km" path="res://left_pallete.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dg5o86nmomfea" path="res://right_pallete.png" id="3"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://b6gyjppiv3re1" path="res://ball.png" id="5"]
[ext_resource type="Texture2D" uid="uid://beii8n47s2iv7" path="res://separator.png" id="6"]
[ext_resource type="Script" path="res://scripts/wall.gd" id="7"]
[ext_resource type="Script" path="res://scripts/ceiling_floor.gd" id="8"]
[ext_resource type="Script" path="res://Button.gd" id="9_4i8vk"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(20, 400)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(640, 20)

[node name="Pong" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 400.0
color = Color(0.141176, 0.152941, 0.164706, 1)

[node name="Left" type="Area2D" parent="."]
position = Vector2(67.6285, 192.594)
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="Left"]
texture = ExtResource("2")

[node name="Collision" type="CollisionShape2D" parent="Left"]
shape = SubResource("1")

[node name="Right" type="Area2D" parent="."]
position = Vector2(563.815, 188.919)
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="Right"]
texture = ExtResource("3")

[node name="Collision" type="CollisionShape2D" parent="Right"]
shape = SubResource("1")

[node name="Ball" type="Area2D" parent="."]
position = Vector2(320.5, 191.124)
script = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture = ExtResource("5")

[node name="Collision" type="CollisionShape2D" parent="Ball"]
shape = SubResource("2")

[node name="Separator" type="Sprite2D" parent="."]
position = Vector2(320, 200)
texture = ExtResource("6")

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2(-10, 200)
script = ExtResource("7")

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("3")

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(650, 200)
script = ExtResource("7")

[node name="Collision" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("3")

[node name="Ceiling" type="Area2D" parent="."]
position = Vector2(320, -10)
script = ExtResource("8")

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource("4")

[node name="Floor" type="Area2D" parent="."]
position = Vector2(320, 410)
script = ExtResource("8")
_bounce_direction = -1

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource("4")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(320, 200)

[node name="Panel" type="Panel" parent="."]
offset_top = -50.0
offset_right = 640.0

[node name="labelA" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 25.0
text = "Points of Player A:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelB" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 500.0
offset_right = 640.0
offset_bottom = 25.0
text = "Points of Player B:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Labelfinal" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 220.0
offset_right = 420.0
offset_bottom = 50.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelpointA" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 25.0
offset_right = 140.0
offset_bottom = 50.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelpointB" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 500.0
offset_top = 25.0
offset_right = 640.0
offset_bottom = 50.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 434.0
offset_top = -50.0
offset_right = 491.0
text = "RESET"
script = ExtResource("9_4i8vk")

[connection signal="area_entered" from="Left" to="Left" method="_on_area_entered"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
